--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
       - ./apps/Metall_Scraper/.env
     restart:
       always
+    depends_on:
+      db:
+        condition: service_healthy
+
   tg_bot:
     container_name: tg_bot
     hostname: tg_bot
@@ -17,6 +21,9 @@ services:
       - ./apps/Metall_Main_Bot/.env
     restart:
       always
+    depends_on:
+      db:
+        condition: service_healthy
 
 
   db:
@@ -34,6 +41,10 @@ services:
     volumes:
       - db:/var/lib/mysql
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
 
 volumes:
   db:
